Bug 1152049 - Apply all scroll clips when computing plugin clips in content. r=tn